components/networkpolicies/policy-templates/allow-all-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: <NAMESPACE>
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
