components/networkpolicies/policy-templates/allow-all-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: <NAMESPACE>
spec:
  podSelector: {}
  ingress:
    - {}
  policyTypes:
    - Ingress
