components/networkpolicies/policy-templates/allow-egress-from-all-to-kube-dns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-all-to-kube-dns
  namespace: <NAMESPACE>
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: UDP
          port: 53
      to:
        - podSelector:
            matchLabels:
              k8s-app: kube-dns
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - ipBlock:
            cidr: ${KUBE_POD_IP_CIDR:=10.0.0.0/8}
        - ipBlock:
            cidr: ${KUBE_SVC_IP_CIDR:=10.0.0.0/8}
  policyTypes:
    - Egress
