components/networkpolicies/policy-templates/allow-egress-from-all-to-private-network.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-all-to-private-network
  namespace: <NAMESPACE>
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: ${PRIVATE_IP_CIDR:=10.0.0.0/8}
  policyTypes:
    - Egress
