components/networkpolicies/policy-templates/allow-egress-internet.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-internet
  namespace: <NAMESPACE>
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
  policyTypes:
    - Egress
