components/networkpolicies/policy-templates/allow-egress-logging-google-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-logging-google-api
  namespace: <NAMESPACE>
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 216.239.38.174/32
    - ipBlock:
        cidr: 216.239.32.174/32
    - ipBlock:
        cidr: 216.239.34.174/32
    - ipBlock:
        cidr: 216.239.36.174/32
  podSelector: {}
  policyTypes:
  - Egress
