components/networkpolicies/policy-templates/allow-ingress-from-cluster-to-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-cluster-to-all
  namespace: <NAMESPACE>
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector: {}
  policyTypes:
    - Ingress
