components/networkpolicies/policy-templates/allow-ingress-from-private-network-to-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-private-network-to-all
  namespace: <NAMESPACE>
spec:
  podSelector: {}
  ingress:
    - from:
        - ipBlock:
            cidr: ${PRIVATE_IP_CIDR:=10.0.0.0/8}
  policyTypes:
    - Ingress
