components/networkpolicies/policy-templates/allow-ingress-from-prometheus-to-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-prometheus-to-all
  namespace: <NAMESPACE>
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
          namespaceSelector:
            matchLabels:
              k8s-namespace: monitoring
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
          namespaceSelector:
            matchLabels:
              k8s-namespace: monitoring
  policyTypes:
    - Ingress
